# wasm-breizhcamp

./: README.md
demo1/: index.html  package-lock.json  package.json  splendor.css  vite.config.js
demo1/lib/: Cargo.toml  LICENSE_MIT
demo1/lib/src/: lib.rs
demo1/src/: index.js
demo2/markdownCLib/: Cargo.toml  markdownCLib.h
demo2/markdownCLib/src/: lib.rs
demo2/node/: a.out.js  a.out.wasm  hello_world_file.md  main.c
demo3/: Cargo.toml
demo3/src/: main.rs
demo4/: md_parser.wasm
demo4/md-parser/: Cargo.toml  md-parser.wit
demo4/md-parser/src/: lib.rs
demo4/runtime/: Cargo.toml  fetch.wit
demo4/runtime/src/: main.rs
demo5/: Cargo.toml  Dockerfile  README.md  demo3.wasm
demo5/src/: main.rs
