[package]
name = "markdownCLib"
version = "0.1.0"
edition = "2021"

[lib]
name = "markdown_c_lib"
# crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false }
