[package]
name = "md-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark="0.9.1"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
