[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
reqwest = { version = "0.11.11", features = ["blocking"] }